correction contrast + ancre + padding

--- a/wp-content/themes/steaktheme/fichierscss/main.css
+++ b/wp-content/themes/steaktheme/fichierscss/main.css
@@ -23,18 +23,18 @@
  }
 
  .strokehomepage-motiondesign:hover  {
-   -webkit-text-stroke-color: #ACB0FF;
-   color: #ACB0FF;
+   -webkit-text-stroke-color: #767dff;
+   color: #767dff;
  }
 
  .strokehomepage-webdesign:hover  {
-   -webkit-text-stroke-color: #FFDEAC;
-   color: #FFDEAC;
+   -webkit-text-stroke-color: #cb58e5;
+   color: #cb58e5;
  }
 
  .strokehomepage-graphisme:hover  {
-   -webkit-text-stroke-color: #FFACAC;
-   color: #FFACAC;
+   -webkit-text-stroke-color: #e26363;
+   color: #e26363;
  }
 
  .portfoliostyle{
